Change media queries for 'Find Us' section from max-width 800px to 830px to fix overflow visible on iPad Air

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,7 +325,7 @@ nav a:active, a:hover {
 #find-us-box {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 3rem;
     font-size: 1.2rem;
 }
@@ -465,7 +465,7 @@ nav a:active, a:hover {
 }
 
 /* Find Us */
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 830px) {
     #find-us-box {
         display: flex;
         flex-direction: column;
